--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+    "pixi.js": "^8.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
